appId: dev.osuki.kit
name: page-categories
---
- launchApp:
    clearState: true
    stopApp: true
- openLink: "osuki://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8081"
- tapOn:
    text: "Open"
    optional: true
- extendedWaitUntil:
    visible: "Osuki Market"
    timeout: 60000

- openLink: "osuki:///categories"
- tapOn:
    text: "Open"
    optional: true
- extendedWaitUntil:
    visible: "Categories"
    timeout: 10000
- assertVisible: "Categories"
